# mysk-api

./: .env.example  .env.template  .gitignore  Cargo.toml  README.md  flake.nix  mprocs.yaml  rustc-ice-2024-01-29T02_59_10-62235.txt  rustc-ice-2024-01-29T02_59_10-62236.txt  rustc-ice-2024-01-29T02_59_27-62269.txt  rustc-ice-2024-01-29T02_59_27-62270.txt  rustc-ice-2024-01-29T02_59_38-62334.txt  rustc-ice-2024-01-29T02_59_38-62335.txt
mysk-data-api/: Cargo.toml  build.rs
mysk-data-api/src/: main.rs
mysk-data-api/src/extractors/: api_key.rs  logged_in.rs  mod.rs  student.rs  teacher.rs
mysk-data-api/src/middlewares/: api_key.rs  logged_in.rs  mod.rs  student.rs
mysk-data-api/src/routes/: doc.rs  health.rs  mod.rs  not_found.rs  test.rs
mysk-data-api/src/routes/auth/: create_api_key.rs  google_login.rs  google_oauth_login.rs  gsi_login.rs  mod.rs  user.rs
mysk-data-api/src/routes/v1/: mod.rs
mysk-data-api/src/routes/v1/attendance/: mod.rs
mysk-data-api/src/routes/v1/certificates/: mod.rs
mysk-data-api/src/routes/v1/clubs/: add_club_members.rs  create_club_contacts.rs  get_club_statistics.rs  join_clubs.rs  mod.rs  query_club_details.rs  query_clubs.rs
mysk-data-api/src/routes/v1/contacts/: delete_contacts.rs  mod.rs  modify_contacts.rs  query_contact_details.rs  query_contacts.rs
mysk-data-api/src/routes/v1/students/: create_student_contacts.rs  get_student_by_id.rs  mod.rs  modify_student.rs  query_cheer_practice_attendance.rs  query_student_details.rs  query_students.rs  query_students_cheer_practice_attendance.rs  query_students_club_quota.rs
mysk-data-api/src/routes/v1/subjects/: mod.rs
mysk-data-api/src/routes/v1/teachers/: create_teacher_contacts.rs  get_teacher_by_id.rs  mod.rs  modify_teacher.rs  query_teacher_details.rs  query_teachers.rs
mysk-lib/: Cargo.toml
mysk-lib-derives/: Cargo.toml
mysk-lib-derives/src/: lib.rs
mysk-lib-macros/: Cargo.toml
mysk-lib-macros/src/: derive.rs  fetch_level_variant.rs  fetch_variant.rs  lib.rs
mysk-lib-macros/src/fetch_level_variant/: impl_fetch_level_variant_from.rs  impl_id_only_variant_from.rs  mod.rs  non_db_request_variant.rs
mysk-lib-macros/src/traits/: db.rs  mod.rs
mysk-lib/src/: cache.rs  error.rs  lib.rs  prelude.rs
mysk-lib/src/auth/: key.rs  oauth.rs
mysk-lib/src/common/: config.rs  mod.rs  pagination.rs  requests.rs  response.rs  string.rs
mysk-lib/src/helpers/: date.rs
mysk-lib/src/models/: impl_fetch.rs  mod.rs  model.rs  top_level_variant.rs  traits.rs
mysk-lib/src/models/auth/: key.rs  mod.rs  oauth.rs  user.rs
mysk-lib/src/models/certificate/: db.rs
mysk-lib/src/models/cheer_practice_attendance/: db.rs  mod.rs
mysk-lib/src/models/cheer_practice_attendance/fetch_levels/: default.rs  id_only.rs
mysk-lib/src/models/cheer_practice_attendance/request/: queryable.rs  sortable.rs
mysk-lib/src/models/cheer_practice_period/: db.rs  mod.rs
mysk-lib/src/models/cheer_practice_period/fetch_levels/: default.rs  detailed.rs  id_only.rs  mod.rs
mysk-lib/src/models/cheer_practice_period/request/: queryable.rs  sortable.rs
mysk-lib/src/models/classroom/: db.rs  mod.rs
mysk-lib/src/models/classroom/fetch_levels/: compact.rs  default.rs  id_only.rs
mysk-lib/src/models/club/: db.rs  mod.rs
mysk-lib/src/models/club/fetch_levels/: compact.rs  default.rs  detailed.rs  id_only.rs
mysk-lib/src/models/club/request/: mod.rs  queryable.rs  sortable.rs
mysk-lib/src/models/club_request/: db.rs  mod.rs
mysk-lib/src/models/club_request/fetch_levels/: default.rs  id_only.rs  mod.rs
mysk-lib/src/models/club_request/request/: queryable.rs  sortable.rs
mysk-lib/src/models/common/: config.rs  mod.rs  requests.rs  response.rs  string.rs  top_level_variant.rs  traits.rs
mysk-lib/src/models/common/enums/: submission_status.rs
mysk-lib/src/models/contact/: db.rs  mod.rs
mysk-lib/src/models/contact/enums/: contact_type.rs  mod.rs
mysk-lib/src/models/contact/fetch_levels/: default.rs  id_only.rs
mysk-lib/src/models/contact/request/: queryable.rs  sortable.rs
mysk-lib/src/models/elective_subject/: db.rs  mod.rs
mysk-lib/src/models/elective_subject/fetch_levels/: compact.rs  default.rs  detailed.rs  id_only.rs  mod.rs
mysk-lib/src/models/elective_subject/request/: queryable.rs  sortable.rs
mysk-lib/src/models/elective_trade_offer/: db.rs  mod.rs
mysk-lib/src/models/elective_trade_offer/fetch_levels/: default.rs  id_only.rs  mod.rs
mysk-lib/src/models/elective_trade_offer/request/: creatable.rs  mod.rs  queryable.rs  sortable.rs  updatable.rs
mysk-lib/src/models/enums/: activity_day_house.rs  blood_group.rs  certificate_type.rs  cheer_practice_attendance_type.rs  contact_type.rs  mod.rs  sex.rs  shirt_size.rs  subject_type.rs  submission_status.rs  user_role.rs
mysk-lib/src/models/online_teaching_reports/: db.rs  mod.rs
mysk-lib/src/models/online_teaching_reports/fetch_levels/: default.rs  id_only.rs
mysk-lib/src/models/online_teaching_reports/requests/: queryable.rs  sortable.rs
mysk-lib/src/models/organization/: db.rs  mod.rs
mysk-lib/src/models/person/: db.rs  mod.rs
mysk-lib/src/models/person/enums/: blood_group.rs  mod.rs  sex.rs  shirt_size.rs
mysk-lib/src/models/student/: db.rs  mod.rs
mysk-lib/src/models/student/fetch_levels/: compact.rs  default.rs  detailed.rs  id_only.rs
mysk-lib/src/models/student/request/: queryable.rs  sortable.rs
mysk-lib/src/models/subject/: db.rs  mod.rs
mysk-lib/src/models/subject/enums/: mod.rs  subject_type.rs
mysk-lib/src/models/subject/fetch_levels/: compact.rs  default.rs  detailed.rs  id_only.rs
mysk-lib/src/models/subject_group/: db.rs  mod.rs
mysk-lib/src/models/subject_group/fetch_levels/: default.rs
mysk-lib/src/models/teacher/: db.rs  mod.rs
mysk-lib/src/models/user/: db.rs  mod.rs
mysk-lib/src/models/user/enums/: mod.rs  (+1 more)
mysk-lib/src/permissions/: authorizer.rs  mod.rs  traits.rs
mysk-lib/src/permissions/roles/: admin.rs  management.rs  mod.rs  organization.rs  student.rs  teacher.rs
mysk-lib/src/query/: building_blocks.rs  fragment.rs  mod.rs  set_clause.rs  where_clause.rs
(+185 files in other folders)
