[workspace]
members = ["mysk-data-api", "mysk-lib", "mysk-lib-macros"]
resolver = "2"

[workspace.package]
authors = [
  "Smart Wattanapornmongkol <smartwattana@gmail.com>",
  "Phawat Suksiriwan <phawat@suksiriwan.com>",
  "owo93 <Iztyle30@gmail.com>",
]
version = "0.6.0"
edition = "2021"

[workspace.dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
async-trait = "0.1.85"
bs58 = "0.5.1"
chrono = { version = "0.4.39", features = ["serde"] }
darling = "0.20.10"
dotenv = "0.15.0"
env_logger = "0.11.6"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
log = "0.4.25"
parking_lot = "0.12.3"
quote = "1.0.38"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.135"
serde_qs = "0.13.0"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = [
  "chrono",
  "json",
  "macros",
  "postgres",
  "runtime-tokio-native-tls",
  "uuid",
] }
syn = { version = "2.0.96", features = ["parsing"] }
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.0", features = ["serde", "v4"] }
