[workspace]
members = ["mysk-data-api", "mysk-lib", "mysk-lib-macros"]
resolver = "2"

[workspace.package]
authors = [
  "Smart Wattanapornmongkol <smartwattana@gmail.com>",
  "Phawat Suksiriwan <phawat@suksiriwan.com>",
  "owo93 <Iztyle30@gmail.com>",
]
version = "0.6.1-1"
edition = "2024"

[workspace.dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.98"
bs58 = "0.5.1"
chrono = { version = "0.4.41", features = ["serde"] }
darling = "0.20.11"
dotenv = "0.15.0"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4.27"
parking_lot = "0.12.4"
quote = "1.0.40"
rand = "0.8.5"
reqwest = { version = "0.12.20", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_qs = "0.13.0"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "json",
  "macros",
  "postgres",
  "runtime-tokio-native-tls",
  "uuid",
] }
syn = { version = "2.0.104", features = ["parsing"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
