[package]
name = "mysk-data-api"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
anyhow.workspace = true
bs58.workspace = true
chrono.workspace = true
dotenv.workspace = true
env_logger.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
mysk-lib = { path = "../mysk-lib" }
mysk-lib-macros = { path = "../mysk-lib-macros" }
parking_lot.workspace = true
reqwest.workspace = true
serde_qs.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[build-dependencies]
chrono.workspace = true
