[package]
name = "mysk-lib-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sqlx = { version = "0.7.2", default-features = false, features = [
    "postgres",
    "uuid",
    "chrono",
    "json",
    "runtime-async-std-native-tls",
    "macros",
] }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
