[package]
name = "mysk-lib-macros"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
sqlx = { version = "0.7.2", default-features = false, features = [
    "chrono",
    "json",
    "macros",
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
