[package]
name = "mysk-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1" }
env_logger = "0.11.0"
serde_qs = "0.12.0"
utoipa = { version = "4", features = ["actix_extras"] }
# openssl={ version = "0.10", features = ["v110"] }

sqlx = { version = "0.7.2", default-features = false, features = [
    "postgres",
    "uuid",
    "chrono",
    "json",
    "runtime-async-std-native-tls",
    "macros",
] }
serde = "1.0.164"
serde_json = "1.0.64"
chrono = { version = "0.4.37", features = ["serde"] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
base64 = "0.22.0"
jsonwebtoken = "9.2.0"
async-trait = "0.1.68"
reqwest = { version = "0.12.2", features = ["json"] }
futures = "0.3.17"
bs58 = "0.5.0"
sha2 = "0.10.8"
rand = "0.8.4"
mysk-lib-derives = { path = "../mysk-lib-derives" }
mysk-lib-macros = { path = "../mysk-lib-macros" }
