[package]
name = "mysk-lib"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1" }
bs58 = "0.5.0"
chrono = { version = "0.4.37", features = ["serde"] }
futures = "0.3.17"
jsonwebtoken = "9.2.0"
mysk-lib-derives = { path = "../mysk-lib-derives" }
mysk-lib-macros = { path = "../mysk-lib-macros" }
rand = "0.8.4"
reqwest = { version = "0.12.2", features = ["json"] }
serde = "1.0.164"
serde_json = "1.0.64"
serde_qs = "0.12.0"
sha2 = "0.10.8"
sqlx = { version = "0.7.2", default-features = false, features = [
    "chrono",
    "json",
    "macros",
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
